fix menu collapse

--- a/src/styles/components/_player.scss
+++ b/src/styles/components/_player.scss
@@ -6,6 +6,7 @@
   position: absolute;
   top: 0;
   bottom: 0;
+  @extend .bg-black;
   .player-close{
     opacity: .1;
     position: absolute;
